; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_property_test.c_test_property_defn_cache.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_property_test.c_test_property_defn_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"red\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"blue\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_property_defn_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_property_defn_cache() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32 0, i32* %4, align 4
  %5 = call i32* @ossl_method_store_new(i32* null)
  store i32* %5, i32** %1, align 8
  %6 = call i64 @TEST_ptr(i32* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %45

8:                                                ; preds = %0
  %9 = call i64 @add_property_names(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32* null)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %45

11:                                               ; preds = %8
  %12 = call i32* @ossl_parse_property(i32* null, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i32* %12, i32** %2, align 8
  %13 = call i64 @TEST_ptr(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %45

15:                                               ; preds = %11
  %16 = call i32* @ossl_parse_property(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  store i32* %16, i32** %3, align 8
  %17 = call i64 @TEST_ptr(i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %45

19:                                               ; preds = %15
  %20 = load i32*, i32** %2, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = call i64 @TEST_ptr_ne(i32* %20, i32* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %45

24:                                               ; preds = %19
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @ossl_prop_defn_set(i32* null, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32* %25)
  %27 = call i64 @TEST_true(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %45

29:                                               ; preds = %24
  %30 = load i32*, i32** %3, align 8
  %31 = call i32 @ossl_prop_defn_set(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32* %30)
  %32 = call i64 @TEST_true(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %45

34:                                               ; preds = %29
  %35 = call i32 @ossl_prop_defn_get(i32* null, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %36 = load i32*, i32** %2, align 8
  %37 = call i64 @TEST_ptr_eq(i32 %35, i32* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %45

39:                                               ; preds = %34
  %40 = call i32 @ossl_prop_defn_get(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %41 = load i32*, i32** %3, align 8
  %42 = call i64 @TEST_ptr_eq(i32 %40, i32* %41)
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %45

44:                                               ; preds = %39
  store i32 1, i32* %4, align 4
  br label %45

45:                                               ; preds = %44, %39, %34, %29, %24, %19, %15, %11, %8, %0
  %46 = load i32*, i32** %1, align 8
  %47 = call i32 @ossl_method_store_free(i32* %46)
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i64 @TEST_ptr(i32*) #1

declare dso_local i32* @ossl_method_store_new(i32*) #1

declare dso_local i64 @add_property_names(i8*, i8*, i32*) #1

declare dso_local i32* @ossl_parse_property(i32*, i8*) #1

declare dso_local i64 @TEST_ptr_ne(i32*, i32*) #1

declare dso_local i64 @TEST_true(i32) #1

declare dso_local i32 @ossl_prop_defn_set(i32*, i8*, i32*) #1

declare dso_local i64 @TEST_ptr_eq(i32, i32*) #1

declare dso_local i32 @ossl_prop_defn_get(i32*, i8*) #1

declare dso_local i32 @ossl_method_store_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
